frontend/src/styles/App.css
/* ... */
#MenuBar > a {
  margin-right: 1em;
  text-decoration: none;
  color: black;
}

h1 {
  margin: 1em 0 0 0;
}

select {
  font-size:  0.75em;
}

#schedSelect,
#LoadingInfo {
  margin-left: 1em;
}

form > input[type="text"] {
  border-radius: .3em;
  padding: 0.4em;
  font-size: .75em;
  margin: 4px;
  background-color: #f5f5f5;
}

#CSearch {
  width: 100%;
  min-width: 17rem;
  padding:0.5rem;
  background-color: white;
}

#searchbar .level-left > *, #searchbar .level-right > *{
  margin-left:0.5rem;
  margin-right:0.5rem;
}

#searchbar button{
  min-width:8rem;
}

.is-active i.fa.fa-angle-down::before{
  content:"\f106"!important;
}

footer:hover i.fa.fa-angle-up::before{
  content:"\f107"!important;
}

/*#loaderWrap {height: 30px; width: 30px; display: inline-block; vertical-align: middle;}
.loader {
	height: 30px;
	width: 30px;
	text-align: center;
	margin: 0 auto .2em;
	margin-left: 2em;
	display: none;
	vertical-align: middle;
}*/

.spinner {
  /*  margin: 50px;
  height: 28px;
  width: 28px;*/
  display: inline-block;
  height: 1.25em;
  width: 1.25em;
  vertical-align: middle;
  margin-left: 2em;
  animation: rotate 0.8s infinite linear;
  border: 0.1875em solid #fff;
  border-right-color: transparent;
  border-radius: 50%;
  opacity: 1;
  transition: opacity 0.25s ease-in-out;
}

@keyframes rotate {
  0%    { transform: rotate(0deg); }
  100%  { transform: rotate(360deg); }
}

.hide {
  opacity: 0;
  /*visibility: hidden;*/
}

#CourseHeader {
  overflow: hidden;
  height: 1.5em;
}

#CourseList,
#SectionCol {
  height: calc(100vh - 16em);
  box-sizing: border-box;
  list-style-type: none;
  background-color: white;
  font-size: 0.75em;
  text-align: left;
  border-radius: .375em;
}

#CourseList {
  text-align: left;
  margin-right: 1em;
}
#CourseList > ul {
  overflow-y: scroll;
  height: calc(100% - 2.5em);
}

#SectionCol {
  border-top-right-radius: .375em;
}

#Sections,
#SectionInfo {
  padding-left: 0.5em;
}

#Sections {
  height: 30%;
  border-top-right-radius: .375em;
  text-align: center;
  overflow-y:hidden;
}

#SectionList {
  height: calc(100% - 2em);
  overflow-y: scroll;
}
.sectionText {
  /*display: inline-block;*/
  height: 1.5em;
  line-height: 1.5em;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}
.hideSec {
  opacity: 0.4;
  /* background-color: #E6E6E6; */
}

#SectionInfo {
  height: 65%;
  /* width: 25.3em; */
  overflow-y: scroll;
  /*padding-right: 0.5em;*/
  border-top: 1em solid white;
  /* box-sizing: border-box; */
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#CourseList li {
  padding: 0.125em 1em .125em 6.5em;
  text-indent: -6.25em;
}

#CourseList li:first-child{
  margin-top:0.35rem;
}

#SectionList li,
#SectionInfo li {
  padding: 0.125em 0.5em 0 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

#CourseList li,
.sectionText,
#SectionInfo li {
  cursor: pointer;
}

#sortCourses {
  width: 40%;
}

#CourseList li:hover,
#SectionList li:hover,
#SectionInfo li:hover,
.activeItem {
  background-color: #E6E6E6;
}

#CourseList li:active,
#SectionList li:active,
#SectionInfo li:active {
  background-color: #CCCCCC;
}

#SectionList i:nth-child(1):active {
  color: #00B3FF;
}

/* .statusClass { */
  /* display: inline-block; */
  /* width: 1.5em; */
  /* height: 1.5em; */
  /* vertical-align: top; */
  /* padding-top: 1px; */
  /* margin-left: 2px; */
  /* margin-top: 0.15em; */
  /* text-align: center; */
  /* line-height: 13px; */
  /* border-radius: 2px; */
  /* -webkit-font-smoothing: antialiased; */
/* }  */

/* .openSec {
  background-color: #47EA4C;
} */

.closedSec {
  background-color: transparent;
}

.errorSec {
  background-color: #E6E6E6;
}

.PCRSec {
  background-color: #1f8dd6;
}

.PCR {
  vertical-align: top;
  color: white;
  width: 2.5em;
  /* height: 1.5em; */
  text-indent: 0;
  display: inline-block;
  border-radius: 15px;
  text-align: center;
  margin-top: 3px;
  margin-left: 2px;
  margin-right: 2px;
}

.fa-plus, .fa-times {vertical-align: text-top}
.fa-star,
.fa-star-o {
  float: right;
  font-size: 1.25em;
  line-height: 1.25em;
  color: #01256e;
}

.fa-envelope {
  color: white;
  font-size: 1em;
  /*margin: auto;*/
  /*text-align: center;*/
  /*line-height: 8px;*/
  /*margin-bottom: 3px;*/
}

#InfoPanel .box{
  width: 95%;
}

#FilterSearch {
  overflow: hidden;
  font-size: 1em;
  min-width: 500px;
  opacity:0;
  max-width:60%;
  min-height: 12.5rem;
  max-height:50%;
  position:fixed;
  visibility:hidden;
  margin-bottom: 1em;
  /*display: none;*/
  background-color: white;
  border-radius: 5px;
  vertical-align: top;
  transition: opacity 250ms ease;
  padding:0.5rem!important;
}

#filter_search_toggler{
  background-size: 100% 100%;
  width:1.3rem;
  height:1.3rem;
  cursor:pointer;
}

.FilterPanel {
  height: 100%;
  width: 40%;
  background-color: white;
  float: left;
  display: inline-block;
  vertical-align: top;
}

.FilterBlock {
  box-sizing: border-box;
  text-align: left;
  text-indent: 2em;
  line-height: 2.5em;
  margin-bottom: 1em;
  overflow: hidden;
}

.FilterBlock > input {
  margin: 0 1em 0 .5em;
}

#reqFilter {
  line-height: 1.25em;
  text-indent: 0;
  padding-left: 1em;
  margin-bottom: 3px;
  overflow-y: scroll;
}

#reqFilter > span {
  display: inline-block;
  float: left;
  width: 50%;
}

#reqTypes {
  width: 100%;
  margin-bottom: 3px;
  cursor: pointer;
}

#reqTypes > span {
  display: inline-block;
  width:33.33333333%;
  float:left;
  text-align: center;
  text-indent: 0;
  /* margin: 0 auto; */
  /* 	background-color: #3498db;
      color: white; */
  font-size: 1.25em;
  flex-basis: 100%;
  cursor: pointer;
  border: 3px solid white;
  box-sizing: border-box;
}

.schoolSelected {
  background-color: #3498db;
  color: white;
}

#SchedGraph {
  height: 100%;
  min-height: 350px;
  min-width: 500px;
  overflow: hidden;
  /*padding: 0 1em 0 1em;*/
  font-size: 1em;
}
/* ... */

